--- a/src/index.css
+++ b/src/index.css
@@ -218,17 +218,14 @@ col.hora.hora{
 .close{
   display: flex;
   justify-content: right;
+  width: 30px;
 }
 
 .row-titulo{
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-}
-
-.grow1{
-  flex: 1;
+  justify-content: space-between;
 }
 
 .titulo{
@@ -575,6 +572,7 @@ button{
   text-align: left;
   font-size: 1em;
   font-family: inherit;
+  font-weight: 500;
   cursor: pointer;
   background-color: inherit;
   border: none;
