--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
     monospace;
 }
 html{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'ROBOTO', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 :root {
   font-family: 'Roboto';
